BPER/DEVF/force-app/main/default/objects/Displacement__c/Displacement__c.object-meta.xml
<CustomObject>
    <label>Displacement</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Displacement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Displacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>