BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/ExecutedDate__c.field-meta.xml
<CustomField>
    <fullName>ExecutedDate__c</fullName>
    <defaultValue>DATETIMEVALUE(&quot;1900-01-01 12:00:00&quot;)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Executed Date</label>
    <type>DateTime</type>
</CustomField>