BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/in_IdcedFilialeDestinazione__c.field-meta.xml
<CustomField>
    <fullName>in_IdcedFilialeDestinazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>in IdCed Filiale Destinazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>