BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/in_Istituto__c.field-meta.xml
<CustomField>
    <fullName>in_Istituto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>in Istituto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>