BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/In_MatricolaReferente__c.field-meta.xml
<CustomField>
    <fullName>In_MatricolaReferente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In Matricola Referente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>