BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/in_ModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>in_ModelloDiServizio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>in Modello Di Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>