BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/in_Ndg__c.field-meta.xml
<CustomField>
    <fullName>in_Ndg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>in Ndg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>