BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/in_PtfPartenza__c.field-meta.xml
<CustomField>
    <fullName>in_PtfPartenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>in Ptf Partenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>