BPER/DEVF/force-app/main/default/objects/Displacement__c/fields/RichiestaSpostamento__c.field-meta.xml
<CustomField>
    <fullName>RichiestaSpostamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Richiesta Spostamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>